--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Electrónica</div></a>
                                     <h5 class="card-title mt-3 mb-1">Práctica 5: Arduino Basico 2: Servomotores</h5>
-                                    <p class="card-text mb-0">Breve resumen de la práctica 1. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita.</p>
+                                    <p class="card-text mb-0">Aprenderemos a controlar un servomotor con un Arduino. Usaremos el Arduino para enviar señales al servomotor, que le dirán a qué ángulo debe girar. </p>
                                 </div>
                                 <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="Practica 5/">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -227,6 +227,35 @@
                                             <div class="small">
                                                 <div class="fw-bold">Cristian Ulises Ríos García - Jesus Mauricio Díaz Flores - Mauro David Sánchez Arena</div>
                                                 <div class="text-muted">Septiembre 5, 2024</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--Fin de Tarjeta Práctica 1 -->
+
+                        <!--Tarjeta Práctica 6 -->
+                        <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/Imagen de WhatsApp 2024-10-25 a las 19.31.23_48016790.jpg" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Electrónica</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Mecánica</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 6: Brazo robótico</h5>
+                                    <p class="card-text mb-0">Construiremos un brazo robótico que usará servomotores para agarrar objetos. Conectados a un Arduino, los servomotores se moverán para abrir y cerrar los dedos de la garra.</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="Practica 6/">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/ImaUli.png" alt="..." width="40px">
+                                            <img class="rounded-circle me-3" src="assets/fotoyo.jpeg" alt="..." width="40px">
+                                            <img class="rounded-circle me-3" src="assets/ImaMauro.png" alt="..." width="40px">
+                                            <div class="small">
+                                                <div class="fw-bold">Cristian Ulises Ríos García - Jesus Mauricio Díaz Flores - Mauro David Sánchez Arena</div>
+                                                <div class="text-muted">Octubre 11, 2024</div>
                                             </div>
                                         </div>
                                     </div>
