--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <!-- Seccion Tarjetas reportes Prácticas-->
             <section id="practicas">
                 <div class="container px-5 my-2">
-                    <h2 class="fw-bolder fs-5 mb-4">Reportes de Prácticas:</h2>
+                    <h2 class="fw-bolder fs-5 mb-4">Reportes de Prácticas de Introducción a la Mecatrónica:</h2>
                     <div class="row gx-5">
 
                         <!--Tarjeta Práctica 1 -->
@@ -268,8 +268,44 @@
                     </div>
                 </div>
             </section> 
-            <!--Fin Seccion de Tarjetas de Prácticas -->
+            <!--Fin Seccion de Tarjetas de Prácticas Proyecto de Ingenieria -->
             
+            <section id="practicas">
+                <div class="container px-5 my-2">
+                    <h2 class="fw-bolder fs-5 mb-4">Reportes de Prácticas de Proyectos de Ingenierías:</h2>
+                    <div class="row gx-5">
+
+                        <!--Tarjeta Práctica 4 -->
+                        <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/Imagen3D.png" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Impresión 3D</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Modelaje</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 4: Impresión 3D</h5>
+                                    <p class="card-text mb-0">Aprenderemos a como modelar y hacer una impresión en 3D.</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="Practica 4 Proy/">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/ImaUli.png" alt="..." width="40px">
+                                            <img class="rounded-circle me-3" src="assets/fotoyo.jpeg" alt="..." width="40px">
+                                            <img class="rounded-circle me-3" src="assets/ImaMauro.png" alt="..." width="40px">
+                                            <div class="small">
+                                                <div class="fw-bold">Cristian Ulises Ríos García - Jesus Mauricio Díaz Flores - Mauro David Sánchez Arena</div>
+                                                <div class="text-muted">Septiembre 27, 2024</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                       
+                    </div>
+                </div>
+            </section> 
         </main>
 
         <!-- Footer-->
