--- a/Practica 1/index.html
+++ b/Practica 1/index.html
@@ -146,6 +146,8 @@
                             <figure class="mb-4" align="center"><video width="80%"  controls>
                                 <source src="video/Circuit design practica1 - Tinkercad - Google Chrome 2024-10-25 21-37-09.mp4" type="video/mp4">
                             </video></p></figure>
+                            <source src="video/Circuit design practica1 - Tinkercad - Google Chrome 2024-10-25 21-37-09.mp4" type="video/mp4">
+                            <source src="video/Circuit design practica1 - Tinkercad - Google Chrome 2024-10-25 21-37-09.mp4" type="video/mp4">
                             <p class="fs-6 mb-4">Efectivamente funciona, ya que si usamos el potenciómetro al máximo, el LED brilla sin parar. Ahora procederemos a recrearlo con componentes verdaderos.</p>
                     
                             
@@ -171,7 +173,7 @@
                         <p class="fs-6 mb-4">Con esta práctica realizamos la interpretación de esquemas en CircuitVerse, posteriormente armamos el circuito.</p>
                         <p class="fs-6 mb-4">Video de prueba:</p>
                         <figure class="mb-4" align="center"><video width="80%"  controls>
-                            <source src="video/video.mp4" type="video/mp4">
+                        <source src="video/video.mp4" type="video/mp4">
                         </video></p></figure>
 
                         <p id="conclusiones">
