--- a/Practica 3/index.html
+++ b/Practica 3/index.html
@@ -67,7 +67,7 @@
                             </div>
                         <!--Aqui termina etiqueta de alumno-->
 
-                        <div class="text-muted fst-italic mt-2 mb-2">Fecha: 08 29, 2024</div>
+                        <div class="text-muted fst-italic mt-2 mb-2">Fecha: Agosto 29, 2024</div>
                         <!-- ETIQUETAS O TOPICOS IMPORTANTES DE LA PRACTICA-->
                         <a class="badge bg-primary text-decoration-none link-light" >Arduino</a>
                         <a class="badge bg-primary text-decoration-none link-light" >Electrónica</a>
