--- a/Practica 5/index.html
+++ b/Practica 5/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Práctica 3 | Ibero Puebla</title>
+        <title>Práctica 5 | Ibero Puebla</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -54,7 +54,9 @@
                         <h1 class="fw-bolder mb-1">Arduino Basico 2: Servomotores</h1>
 
                         <!-- ETIQUETA DE ALUMNO (Hacer una por cada alumno)-->
-                            <img class="img-fluid rounded-circle" width="50px" src="assets/Huber.jpg" alt="..." />
+                            <img class="img-fluid rounded-circle" width="50px" src="assets/ImaUli.png" alt="..." />
+                            <img class="img-fluid rounded-circle" width="50px" src="assets/fotoyo.jpeg" alt="..." />
+                            <img class="img-fluid rounded-circle" width="50px" src="assets/ImaMauro.png" alt="..." />
                             <div class="ms-2">
                                 <div class="fw-bold">
                                     Cristian Ulises Ríos García<br />
@@ -65,7 +67,7 @@
                             </div>
                         <!--Aqui termina etiqueta de alumno-->
 
-                        <div class="text-muted fst-italic mt-2 mb-2">Fecha: 29 08, 2024</div>
+                        <div class="text-muted fst-italic mt-2 mb-2">Fecha: Septiembre 5, 2024</div>
                         <!-- ETIQUETAS O TOPICOS IMPORTANTES DE LA PRACTICA-->
                         <a class="badge bg-primary text-decoration-none link-light" >Arduino</a>
                         <a class="badge bg-primary text-decoration-none link-light" >Electrónica</a>
