--- a/index.html
+++ b/index.html
@@ -264,7 +264,34 @@
                         </div>
                         <!--Fin de Tarjeta Práctica 1 -->
 
-                        
+                        <!--Tarjeta Práctica 7 y 8 -->
+                        <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/4.jpg" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Electrónica</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Mecánica</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 6: Brazo Bluetooth y Carro Bluetooth</h5>
+                                    <p class="card-text mb-0">Construimos un carro y un brazo controlados por una aplicación y bluetooth</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="Practica 6/">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/ImaUli.png" alt="..." width="40px">
+                                            <img class="rounded-circle me-3" src="assets/fotoyo.jpeg" alt="..." width="40px">
+                                            <img class="rounded-circle me-3" src="assets/ImaMauro.png" alt="..." width="40px">
+                                            <div class="small">
+                                                <div class="fw-bold">Cristian Ulises Ríos García - Jesus Mauricio Díaz Flores - Mauro David Sánchez Arena</div>
+                                                <div class="text-muted">Noviembre 27, 2024</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </section> 
