--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Electrónica</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Mecánica</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Práctica 6: Brazo Bluetooth y Carro Bluetooth</h5>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 7 y 8: Brazo Bluetooth y Carro Bluetooth</h5>
                                     <p class="card-text mb-0">Construimos un carro y un brazo controlados por una aplicación y bluetooth</p>
                                 </div>
                                 <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="Practica 6/">Leer más</a></div>
