--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                                     <h5 class="card-title mt-3 mb-1">Práctica 7 y 8: Brazo Bluetooth y Carro Bluetooth</h5>
                                     <p class="card-text mb-0">Construimos un carro y un brazo controlados por una aplicación y bluetooth</p>
                                 </div>
-                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="Practica 6/">Leer más</a></div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="Practica 7 y 8/">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
