--- a/Practica 7 y 8/index.html
+++ b/Practica 7 y 8/index.html
@@ -229,12 +229,18 @@
 
                             <h2 class="fw-bolder mb-4 mt-5 fs-5">- Resultados -</h2>
                             <p class="fs-6 mb-4">Los resultados que obtuvimos fueron los mejores. Tanto la garra como el movimiento del carro saliero bien.</p>
+                            <p class="fs-6 mb-4">Carro solo funcionando: </p>
                             <figure class="mb-4" align="center"><video width="80%"  controls>
                                 <source src="video/Carrofin.mp4" type="video/mp4">
                             </video></p></figure>
-                            <figure class="mb-4" align="center"><video width="80%"  controls>
+                            <p class="fs-6 mb-4">Garra funcionando: </p>
                                 <source src="video/Garrafin.mp4" type="video/mp4">
                             </video></p></figure>
+                            <p class="fs-6 mb-4">Carro Prueba: </p>
+                            <figure class="mb-4" align="center"><video width="80%"  controls>
+                                <source src="video/Carrofunfin.mp4" type="video/mp4">
+                            </video></p></figure>
+                            
        
                         <p id="referencias">
                         <h2 class="fw-bolder mb-4 mt-5 fs-5">- Referencias -</h2>
