--- a/index.html
+++ b/index.html
@@ -238,15 +238,42 @@
                         <!--Tarjeta Práctica 6 -->
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/R.jpeg" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Electrónica</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 6: Bluetooth</h5>
+                                    <p class="card-text mb-0">Aprenderemos a utilizar un modulo de bluetooth para controlar cosas a distancia.</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="Practica 6/">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/ImaUli.png" alt="..." width="40px">
+                                            <img class="rounded-circle me-3" src="assets/fotoyo.jpeg" alt="..." width="40px">
+                                            <img class="rounded-circle me-3" src="assets/ImaMauro.png" alt="..." width="40px">
+                                            <div class="small">
+                                                <div class="fw-bold">Cristian Ulises Ríos García - Jesus Mauricio Díaz Flores - Mauro David Sánchez Arena</div>
+                                                <div class="text-muted">Octubre 17, 2024</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--Tarjeta Práctica 6 -->
+                        <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
                                 <img class="card-img-top" src="img/Imagen de WhatsApp 2024-10-25 a las 19.31.23_48016790.jpg" alt="..." />
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Electrónica</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Mecánica</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Práctica 6: Brazo robótico</h5>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 7: Brazo robótico</h5>
                                     <p class="card-text mb-0">Construiremos un brazo robótico que usará servomotores para agarrar objetos. Conectados a un Arduino, los servomotores se moverán para abrir y cerrar los dedos de la garra.</p>
                                 </div>
-                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="Practica 6/">Leer más</a></div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="Practica 7/">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
@@ -272,10 +299,10 @@
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Electrónica</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Mecánica</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Práctica 7 y 8: Brazo Bluetooth y Carro Bluetooth</h5>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 8 y 9: Brazo Bluetooth y Carro Bluetooth</h5>
                                     <p class="card-text mb-0">Construimos un carro y un brazo controlados por una aplicación y bluetooth</p>
                                 </div>
-                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="Practica 7 y 8/">Leer más</a></div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="Practica 8 y 9/">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
