--- a/Practica 6/index.html
+++ b/Practica 6/index.html
@@ -120,6 +120,7 @@
         </li>
         <li><strong>Ejemplo de Bloques:
             <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="600px" src="img/Captura de pantalla 2024-12-02 103749.png" alt="..." /></figure>
+            <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="600px" src="img/Captura de pantalla 2024-12-02 214003 (2).png" alt="..." /></figure>
         <li><strong>Prueba de la App:</strong>
             <ul>
                 <li>Instala la app en tu teléfono.</li>
