--- a/Practica 8 y 9/index.html
+++ b/Practica 8 y 9/index.html
@@ -226,7 +226,8 @@
                             <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="600px" src="img/Cod4.jpg" alt="..." /></figure>
                             <p class="fs-6 mb-4">Y esta es la aplicación para controlarlo: </p> 
                             <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="600px" src="img/App1.jpg" alt="..." /></figure>
-                            <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="600px" src="img/App2.jpg" alt="..." /></figure>
+                            <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="600px" src="img/Si1.png" alt="..." /></figure>
+                            <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="600px" src="img/Si1.png" alt="..." /></figure>
 
                             <h1 class="fw-bolder2 mb-4 mt-5 fs-5"> - Diagrama a Bloques de conexión electrónica - </h1>
                             <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="600px" src="img/Ejemplo de diagrama de posesión de cuenta.png" alt="..." /></figure>
