--- a/Practica 6/index.html
+++ b/Practica 6/index.html
@@ -240,8 +240,10 @@ void loop() {
         <li><strong>Desconexión y Cierre:</strong>
             <ul>
                 <li>Prueba los botones para desconectar del módulo Bluetooth y cerrar la app.</li>
+                <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="600px" src="img/bluetooth.jpg" alt="..." /></figure>
             </ul>
         </li>
+
     </ul>
 
                         <p class="fs-6 mb-4"></p>
@@ -249,9 +251,14 @@ void loop() {
                         <p id="conclusiones">
                         <h2 class="fw-bolder mb-4 mt-5 fs-5">- Conclusiones -</h2>
                         <p class="fs-6 mb-4">Estas prácticas te introducen al uso de Bluetooth tanto para el control de dispositivos físicos (LED) como para crear aplicaciones funcionales y visuales. Con este conocimiento, puedes avanzar a proyectos más complejos.</p>
+                        <p class="fs-6 mb-4">Aplicación de luz en el celular:</p>
                         <figure class="mb-4" align="center"><video width="80%"  controls>
                             <source src="video/Video de WhatsApp 2024-12-02 a las 18.59.51_f1a9b52b.mp4" type="video/mp4">
                             </video></p></figure>
+                        <p class="fs-6 mb-4">Encender el LED del arduino</p>
+                            <figure class="mb-4" align="center"><video width="80%"  controls>
+                                <source src="video/bluetooth.mp4" type="video/mp4">
+                                </video></p></figure>
                         
 
                         <p id="referencias">
